# eTeak

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  LICENCE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  Setup.hs  TODO  bootstrap  config.status  configure  configure.ac  eTeak-runtime.hs  eTeak.cabal  stack.yaml
SELF_files/: SRLOR_H.v  SRLOR_L.v  ectrl.v  ectrl.v~  flipflop.v
Shifter/: m_harness.v~  run.sh~  shifter.balsa  shifter.report  shifter.teak  shifter.teak~  shifter.v  shifter.vcd  shifter.v~  shifter_.v  shifter_1L.teak  shifter_1L.v  shifter_FL_mapped.v  shifter_example.v  shifter_mapped.v  ssemL.v  teak-unlatched.teak  teak_inclusions.v  teak_inclusions.v~  view.sh~
Shifter/Shifter/: m_harness.v  run.sh
aschem/: Main.hi  Main.hs  Makefile  Makefile.am  Makefile.in  Patterns.hi  Patterns.hs  Picture.hi  Picture.hs  Render.hi  Render.hs  Types.hi  Types.hs  makemake.sh
aschem/examples/: Makefile  Makefile.am  Makefile.in  a  j  latch  m  parts  ports  xor
doc/: Makefile  Makefile.am  Makefile.in  balsa-grammar.txt  banner.hs  builtins  font  language-ideas  teak-components.txt
doc/manual/: AppendExpr.balsa  AssignCmd.balsa  BinExpr.balsa  BitfieldExpr.balsa  BuiltinCallExpr.balsa  CaseCmd.balsa  CaseExpr.balsa  ConsExpr.balsa  ExtendExpr.balsa  InputCmd.balsa  LoopCmd.balsa  Makefile  Makefile.am  Makefile.in  NoCmd.balsa  OpenChanRead.balsa  OutputCmd.balsa  ParCmd.balsa  PrintCmd.balsa  SeqCmd.balsa  SinkCmd.balsa  UnExpr.balsa  ValueExpr.balsa  VarRead.balsa  WhileCmd1.balsa  WhileCmd2.balsa  WhileCmd3.balsa  book  compilation.lout  files  flow-optim.dot  flow.dot  grammar.lout  lout.sh  m.aschem  m0.aschem  macros  manual.lout  parsetree.lout
examples/: Makefile  Makefile.am  Makefile.in
examples/Shifter/: example.v  m_harness.v  run.sh  shifter_umcf.v  teak_inclusions.v  types.balsa  view.sh
examples/add/: add.balsa
examples/adder/: adder.balsa
examples/builtins/: Makefile  Makefile.am  Makefile.in  a.balsa  clean.sh  run.sh
examples/events/: Makefile  Makefile.am  Makefile.in  a.balsa  clean.sh  run-pn.sh  run.sh  startup.v  view.sh
examples/oneOrTwo/: oneOrTwo.balsa  oneOrTwo.teak
examples/punf/: Makefile  Makefile.am  Makefile.in  clean.sh  count-10.balsa  count20.balsa  encode.balsa  encode.go  inc.balsa  sim-ssem.balsa  simple-deadlock.balsa  ssem.balsa  try.sh
examples/small/: Makefile  Makefile.am  Makefile.in  a.balsa  a1.balsa  a2.balsa  a3.balsa  aa.balsa  accum.balsa  add.balsa  adders.balsa  addorsub.balsa  already-def.balsa  arb.balsa  arbcall.balsa  arr.balsa  array-enum-index.balsa  array.balsa  arrayIndices.balsa  arrayed.balsa  b1.balsa  b1a.balsa  bad-chan.balsa  bad-enc-inp-index.balsa  binding.balsa  bitsup.balsa  buffer.balsa  buffer2.balsa  builtin-Aa.balsa  builtin-Ba.balsa  builtin-CLa.balsa  builtin-Ca.balsa  builtin-Fd.balsa  builtin-FromString.balsa  builtin-Ga.balsa  builtin-Gb.balsa  builtin-Gc.balsa  builtin-Gd.balsa  builtin-Ge.balsa  builtin-Ha.balsa  (+131 more)
examples/sparkler/: Makefile  Makefile.am  Makefile.in  Project  alu.balsa  alu.go  assemble.sh  basic.go  basic_test.go  buffer.balsa  clean.sh  debug.balsa  decode.balsa  execute.balsa  fetch.balsa  hello.s  hello.s-hand  memarb.balsa  regbank.balsa  shifter.balsa  shifter.go  sim-balsa.sh  sim-pn.sh  sim-teak.sh  sim.balsa  sim.sh  sparkler.balsa  sparkler.v  startup.v  top.v  types.go
examples/ssem/: Makefile  Makefile.am  Makefile.in  gcd.raw  gcd.s  sim.balsa  ssem.balsa
examples/test/: test.balsa
go-teak/: Main.hs
lib/: Balsa.hs  BalsaLexer.hs  Bind.hs  Context.hs  DelayCal.hs  Eval.hs  Finish.hs  Graph.hs  Lexer.hs  Misc.hs  Monitor.hs  NetParts.hs  Network.hs  Optim.hs  Options.hs  ParseTree.hs  Plot.hs  Report.hs  Show.hs  SimBuiltin.hs  SimTypes.hs  Teak.hs  ToolOptions.hs
lib/Language/: Helpers.hs  Transpile.hs
lib/Language/SimpleGo/: AST.hs  Balsa.hs  Env.hs  Eval.hs  Monad.hs  Process.hs  Transforms.hs
misc-hs/: Makefile  Makefile.am  Makefile.in  broken-example.teak  example.teak  makemake.hs  read-network-file.hs  why-network-examples.hs
misc-hs/traverse/: Makefile  Makefile.am  Makefile.in  TraverseBase.hs  t.hs  test.hs
nanoSpaTeak/balsa/: .sim-teak.sh.swo  Makefile  Project  bankSel.dot  bankSelStop.dot  colour.dot  decodeCore.dot  example.map  flags.dot  fork_Datapath.dot  kmux3_Di1.dot  lsmControl.dot  lsmCount.dot  lsmRegNums.dot  mapRegister.dot  memAccess.dot  memDiReg.dot  memoryDualPort-silent.v  memoryDualPort.v  mode.dot  modeUpd.dot  mux2_5bits.dot  mux2_pc.dot  mux3_Datapath.dot  mux3_Temp.dot  mux3_aBus.dot  mux3_bBus.dot  mux3_memAddr.dot  mux3_xPc.dot  nanoAlu.v  nanoDecode.balsa  nanoDecode.dot  nanoDecode.teak  nanoMBoothR3rolled.balsa  nanoMBoothR3unrolled.balsa  nanoMultSupport.balsa  nanoMultiplier.balsa  nanoRegBank.balsa  nanoShifter.balsa  nanoSpaHarvard_deparameterised.balsa  (+59 more)
nanoSpaTeak/tests/: cosim-spa.init  dhry.hex  dummyCoproIrqFiq.v  hello.hex  hello.s  hexdump  spaHarvard-sim  spaHarvard-vcs  technology.ams035.v  technology.example.v  technology.xilinx.v  test-spaHarvardT.v  tmp.elf  tmp.hex  tmp.ld  tmp.lst  tmp.map  tmp.s
nanoSpaTeak/traces/: spaH_V_dhry.trace
optim/: Makefile  Makefile.am  Makefile.in  default.rules
runtime/: Makefile  Makefile.am  Makefile.in
runtime/verilog/: Makefile  Makefile.am  Makefile.in  amust018Teak.v  example.v  monitors.v  runtime.v  test-runtime.v  top.v
src/: Balsa.hs  BalsaLexer.hs  BalsaParser.hs  Bind.hs  Bits.hs  Call.hs  Chan.hs  Config.hs  Context.hs  DelayCal.hs  Dot.hs  Eval.hs  Expr.hs  Finish.hs  Gates.hs  Gen.hs  Graph.hs  Gui.hs  GuiSupport.hs  Latch.hs  Layout.hs  Lexer.hs  Main.hs  Main_.hs  Makefile  Makefile.am  Makefile.in  Misc.hs  Monitor.hs  NetParts.hs  Network.hs  Optim.hs  Options.hs  ParseTree.hs  Parser.hs  Plot.hs  Print.hs  Report.hs  Rule.hs  Scp.hs  (+14 more)
src/Language/: Helpers.hs  Transpile.hs
tech/: Makefile  Makefile.am  Makefile.in  amust-mapping.v  empty-mapping.v  example-mapping.v  nand2-mapping.v  st65-mapping.v  umc130f-mapping.v
test_suit/: eteak_inclusions.v  m_harness.v  run.sh  top.v
(+65 files in other folders)
