name:                eTeak
version:             0.4
synopsis:            This is the eTeak system. A GALS back end for the Balsa language
homepage:            balangs.github.io
license:             GPL-3
license-file:        LICENCE
author:              Mahdi Jelodar
maintainer:          m.j.1989@ieee.org
build-type:          Simple
cabal-version:       >=1.10
data-files:          optim/default.rules
                     library/teak/*.balsa
                     library/teak/sim/*.balsa
                     library/balsa/parts/*.balsa
                     library/balsa/sim/*.balsa
                     library/balsa/types/*.balsa
                     tech/*.v
                     runtime/verilog/*.v
                     examples/add/*.balsa
                     examples/adder/*.balsa
                     examples/builtins/*.balsa
                     examples/builtins/*.sh
                     examples/events/*.balsa
                     examples/events/*.sh
                     examples/events/*.v
                     examples/oneOrTwo/*.balsa
                     examples/punf/*.balsa
                     examples/punf/*.sh
                     examples/Shifter/*.balsa
                     examples/Shifter/*.sh
                     examples/Shifter/*.v
                     examples/small/*.balsa
                     examples/small/*.sh
                     examples/sparkler/*.balsa
                     examples/sparkler/*.sh
                     examples/sparkler/*.s
                     examples/sparkler/*.s-hand
                     examples/sparkler/*.v
                     examples/sparkler/Project
                     examples/ssem/*.balsa
                     examples/ssem/gcd.raw
                     examples/ssem/gcd.s
                     examples/test/*.balsa

extra-source-files:  README.md
extra-doc-files:     doc/*.txt
                     doc/banner.hs
                     doc/builtins
                     doc/font
                     doc/language-ideas
executable eTeak
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, ExistentialQuantification
  build-depends:       base >=4.8 && <4.9, cairo >=0.13 && <0.14, directory >=1.2 && <1.3, mtl >=2.2 && <2.3, filepath >=1.4 && <1.5, array >=0.5 && <0.6, gtk >=0.13 && <0.14, glib, containers >=0.5 && <0.6, unix >=2.7 && <2.8, process >=1.2 && <1.3, text, time
  hs-source-dirs:      src
  default-language:    Haskell2010

executable eTeak-runtime
  main-is:             eTeak-runtime.hs
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
