name:                eTeak
version:             0.4
synopsis:            This is the eTeak system. A GALS back end for the Balsa language
homepage:            balangs.github.io
license:             GPL-3
license-file:        LICENCE
author:              Mahdi Jelodar
maintainer:          m.j.1989@ieee.org
build-type:          Custom
cabal-version:       >=1.10
data-files:          optim/default.rules
                     library/teak/*.balsa
                     library/teak/sim/*.balsa
                     library/balsa/parts/*.balsa
                     library/balsa/sim/*.balsa
                     library/balsa/types/*.balsa
                     tech/*.v
                     runtime/verilog/*.v
                     SELF_files/*.v
                     examples/add/*.balsa
                     examples/adder/*.balsa
                     examples/builtins/*.balsa
                     examples/builtins/*.sh
                     examples/events/*.balsa
                     examples/events/*.sh
                     examples/events/*.v
                     examples/oneOrTwo/*.balsa
                     examples/punf/*.balsa
                     examples/punf/*.sh
                     examples/Shifter/*.balsa
                     examples/Shifter/*.sh
                     examples/Shifter/*.v
                     examples/small/*.balsa
                     examples/small/*.sh
                     examples/sparkler/*.balsa
                     examples/sparkler/*.sh
                     examples/sparkler/*.s
                     examples/sparkler/*.s-hand
                     examples/sparkler/*.v
                     examples/sparkler/Project
                     examples/ssem/*.balsa
                     examples/ssem/gcd.raw
                     examples/ssem/gcd.s
                     examples/test/*.balsa

extra-source-files:  README.md
                     configure
                     configure.ac
                     aclocal.m4
                     install-sh
                     Makefile.am
                     Makefile.in
                     doc/Makefile.am
                     doc/Makefile.in
                     doc/manual/Makefile.am
                     doc/manual/Makefile.in
                     doc/manual/*.balsa
                     doc/manual/*.aschem
                     doc/manual/book
                     doc/manual/compilation.lout
                     doc/manual/files
                     doc/manual/flow.dot
                     doc/manual/flow-optim.dot
                     doc/manual/grammar.lout
                     doc/manual/gui.png
                     doc/manual/lout.sh
                     doc/manual/macros
                     doc/manual/manual.lout
                     doc/manual/parsetree.lout
                     doc/manual/traverse.svg

extra-doc-files:     doc/*.txt
                     doc/banner.hs
                     doc/builtins
                     doc/font
                     doc/language-ideas


executable eTeak
  main-is:             Main.hs
  other-modules:       Balsa, BalsaLexer, BalsaParser, Bind, Bits, Call, Chan, Config, Context, Dot, Eval
                       Expr, Finish, Gates, Gen, Graph, Gui, GuiSupport, Latch, Layout, Lexer, Misc, Monitor
                       NetParts, Network, Optim, Options, ParseTree, Parser, Paths_eTeak, Plot, Print, Report
                       Rule, Show, Sim, SimBuiltin, SimPN, SimTypes, State, Teak, TeakScript, ToolOptions
                       Traverse, Type, Language.Transpile
  other-extensions:    FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, ExistentialQuantification
  build-depends:       base >=4.7 && <5, cairo >=0.13 && <0.14, directory >=1.2 && <1.3, mtl >=2.2 && <2.3, filepath >=1.4 && <1.5, array >=0.5 && <0.6, gtk >=0.14 && <0.15, glib, containers >=0.5 && <0.6, unix >=2.7 && <2.8, process >=1.2 && <1.3, old-time >= 1.1, text
                     , language-go >= 0.9 && < 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

executable go-teak
  build-depends:       base
                     , language-go >= 0.9 && < 0.10
  hs-source-dirs:      go-teak
  main-is:             Main.hs
  default-language:    Haskell2010

executable eTeak-runtime
  main-is:             eTeak-runtime.hs
  other-modules:       Paths_eTeak
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable aschem
  main-is:             Main.hs
  other-modules:       Patterns, Picture, Render, Types
  other-extensions:    FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, ExistentialQuantification
  build-depends:       base, cairo >=0.13 && <0.14, directory >=1.2 && <1.3, mtl, filepath, array >=0.5 && <0.6
  hs-source-dirs:      aschem
  default-language:    Haskell2010
