name:                eTeak
version:             0.4
synopsis:            This is the eTeak system. A GALS back end for the Balsa language
homepage:            balangs.github.io
license:             GPL-3
license-file:        LICENCE
author:              Mahdi Jelodari
maintainer:          m.j.1989@ieee.org
build-type:          Custom
cabal-version:       >=1.10
data-files:          optim/default.rules
                     library/teak/*.balsa
                     library/teak/sim/*.balsa
                     library/balsa/parts/*.balsa
                     library/balsa/sim/*.balsa
                     library/balsa/types/*.balsa
                     tech/*.v
                     runtime/verilog/*.v
                     SELF_files/*.v
                     examples/add/*.balsa
                     examples/adder/*.balsa
                     examples/builtins/*.balsa
                     examples/builtins/*.sh
                     examples/events/*.balsa
                     examples/events/*.sh
                     examples/events/*.v
                     examples/oneOrTwo/*.balsa
                     examples/punf/*.balsa
                     examples/punf/*.sh
                     examples/Shifter/*.balsa
                     examples/Shifter/*.sh
                     examples/Shifter/*.v
                     examples/small/*.balsa
                     examples/small/*.sh
                     examples/sparkler/*.balsa
                     examples/sparkler/*.sh
                     examples/sparkler/*.s
                     examples/sparkler/*.s-hand
                     examples/sparkler/*.v
                     examples/sparkler/Project
                     examples/ssem/*.balsa
                     examples/ssem/gcd.raw
                     examples/ssem/gcd.s
                     examples/test/*.balsa

extra-source-files:  README.md
                     configure
                     configure.ac
                     aclocal.m4
                     install-sh
                     Makefile.am
                     Makefile.in

library
  -- Modules exported by the library.
  exposed-modules: Balsa
                   BalsaLexer
                   BalsaParser
                   Bind
                   Bits
                   Call
                   Chan
                   Config
                   Context
                   Dot
                   Eval
                   Expr
                   Finish
                   Gates
                   Gen	
                   Graph
                   Gui
                   GuiSupport
                   Latch
                   Layout
                   Lexer
                   Misc
                   Monitor
                   NetParts
                   Network
                   Optim
                   Options
                   ParseTree
                   Parser
                   Paths_eTeak
                   Plot
                   Print
                   Report
                   Rule
                   Show
                   Sim
                   SimBuiltin
                   SimPN
                   SimTypes
                   State
                   Teak
                   TeakScript
                   ToolOptions
                   Traverse
                   Type

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, ExistentialQuantification

  -- Other library packages from which modules are imported.
  build-depends:    base >=4.8 && < 5
                  , array >=0.5 && <0.6
                  , cairo >=0.13 && <0.14
                  , containers >=0.5 && <0.6
                  , directory >=1.2 && <1.3
                  , pipes == 4.1.*
                  , pipes-safe == 2.2.*
                  , filepath >=1.4 && <1.5
                  , glib
                  , gtk >=0.13 && <0.15
                  , mtl >=2.2 && <2.3
                  , lens >= 4.12 && < 4.14
                  , old-time >= 1.1
                  , process >=1.2 && <1.3
                  , streams == 3.2.*
                  , text
                  , transformers
                  , unix >=2.7 && <2.8
                  , vector
                  , system-filepath

  -- Directories containing source files.
  hs-source-dirs: src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing

executable eTeak
  main-is:             Main.hs
  other-modules:
  other-extensions:    FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, TypeSynonymInstances, RankNTypes, ExistentialQuantification
  build-depends:       base >=4.7 && <5
                     , array >=0.5 && <0.6
                     , cairo >=0.13 && <0.14
                     , containers >=0.5 && <0.6
                     , directory >=1.2 && <1.3
                     , eTeak
                     , filepath >=1.4 && <1.5
                     , glib
                     , gtk >=0.13 && <0.15
                     , mtl >=2.2 && <2.3
                     , old-time >= 1.1
                     , process >=1.2 && <1.3
                     , text
                     , unix >=2.7 && <2.8
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-incomplete-patterns -fno-warn-name-shadowing -rtsopts
