## Process this file with automake to produce Makefile.in

BALSA_FILES = \
	a1.balsa a2.balsa a3.balsa aa.balsa a.balsa \
	accum.balsa add.balsa adders.balsa addorsub.balsa already-def.balsa \
	arb.balsa arbcall.balsa array.balsa arrayed.balsa array-enum-index.balsa \
	arrayIndices.balsa arr.balsa b1a.balsa b1.balsa bad-chan.balsa \
	bad-enc-inp-index.balsa binding.balsa bitsup.balsa buffer2.balsa buffer.balsa \
	builtin2.balsa builtin-Aa.balsa builtin-Ba.balsa builtin.balsa builtin-Ca.balsa \
	builtin-CLa.balsa builtin-Fa.balsa builtin-Fd.balsa builtin-FromString.balsa builtin-Ga.balsa \
	builtin-Gb.balsa builtin-Gc.balsa builtin-Gd.balsa builtin-Ge.balsa builtin-Gf.balsa \
	builtin-Ha.balsa builtin-Hb.balsa builtin-Ja.balsa builtin-K2f.balsa builtin-rec.balsa \
	builtin-TLa.balsa builtin-ToString.balsa builtin-Xa.balsa c1.balsa case.balsa \
	case-for.balsa cast.balsa c.balsa cmds-after-loop.balsa combine.balsa compiler.balsa \
	concat.balsa cond-decl.balsa cond-decl2.balsa cond-not.balsa cond-type.balsa constants.balsa \
	const-int-chans.balsa const-ops.balsa datapath-choice.balsa d.balsa dc.balsa \
	e1.balsa e2.balsa e.balsa elemcheck.balsa enc1.balsa \
	enc.balsa enclosure2.balsa enclosure.balsa encode.balsa enum.balsa \
	enumprint.balsa f.balsa fj.balsa for2.balsa for.balsa \
	fork.balsa functions.balsa g1.balsa g.balsa h1.balsa \
	h.balsa hello.balsa hh.balsa i.balsa idem.balsa \
	if.balsa implicants.balsa initial.balsa ix.balsa j.balsa \
	join-chan-array.balsa k.balsa labels.balsa l.balsa lvalue.balsa \
	multidim2.balsa multidim.balsa mux.balsa narrowlink.balsa ok-enc-chan.balsa \
	ok-select.balsa ops.balsa optim-ff.balsa optim-vjv.balsa out2.balsa \
	paramb.balsa parse-error.balsa part.balsa p.balsa pipesync.balsa \
	recandenum.balsa records.balsa redefine.balsa repeat-output.balsa s3.balsa \
	s_a.balsa s.balsa s_b.balsa s_c.balsa s_d.balsa \
	s_e.balsa select.balsa seq.balsa s_f.balsa s_h.balsa \
	sho.balsa signAdjEx.balsa signExtend.balsa sim-halting.balsa simpleAdder.balsa \
	simple-var.balsa s_j.balsa s_k.balsa s_l.balsa slice.balsa \
	smashprec.balsa sm.balsa sm-encoder.balsa s_op.balsa split.balsa \
	s_s.balsa s_sh.balsa string.balsa strtoken.balsa sv.balsa \
	s_z.balsa t1.balsa t2.balsa t.balsa token.balsa \
	tv.balsa typ.balsa unused.balsa unused-input.balsa vv.balsa \
	w.balsa while.balsa y.balsa yy.balsa z1.balsa z.balsa

TESTSCRIPTS = clean.sh try.sh run_encode.sh

EXTRA_DIST = $(BALSA_FILES) $(TESTSCRIPTS)
