## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	alu.balsa buffer.balsa debug.balsa decode.balsa execute.balsa fetch.balsa memarb.balsa \
	regbank.balsa shifter.balsa sim.balsa sparkler.balsa types.balsa \
	assemble.sh clean.sh sim-balsa.sh sim-pn.sh sim.sh sim-teak.sh \
	hello.s hello.s-hand \
	Project startup.v top.v
